Update index.html #2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <link href="https://sourabhgpatil.github.io/Form-a-Story/css/style.css" type="text/css" rel="stylesheet">
+    <link href="https://github.com/SourabhGPatil/Form-a-Story/blob/main/css/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>Form a Story</title>
   </head>
