Updated the relative path in original.html

--- a/original.html
+++ b/original.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Completed Story</title>
-    <script type="text/javascript" src="/js/main.js" defer></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <script type="text/javascript" src="js/main.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
@@ -28,7 +28,7 @@
         <p>The Tortoise meanwhile kept going slowly but steadily, and, after a time, passed the place where the Hare was sleeping. But the Hare slept on very peacefully; and when at last he did wake up, the Tortoise was near the goal. The Hare now ran his swiftest, but he could not overtake the Tortoise in time.</p>
       </article>
       <hr>
-     <a href="./index.html">Start Over!</a>
+     <a href="index.html">Start Over!</a>
     </section>
   </body>
 </html>
