--- a/story.html
+++ b/story.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Completed Story</title>
-    <script type="text/javascript" src="/js/main.js" defer></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <script type="text/javascript" src="js/main.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
@@ -18,9 +18,9 @@
       <h2 id="moral">Moral of the story:</h2>
       <article id="moral-message"></article>
       <hr>
-      <a href="./index.html">Start Over!</a>
+      <a href="index.html">Start Over!</a>
       <span> || </span>
-      <a href="./original.html">Original Story</a>
+      <a href="original.html">Original Story</a>
     </section>
   </body>
 </html>
