--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>Complete the Form -<br> Complete the Story!</h1>
       <hr>
       <!--The Form-->
-      <form action="/story.html" method="GET">
+      <form action="story.html" method="GET">
 
         <label for="animal-1">Animal:</label>
         <input placeholder="Eg. Lion" id="animal-1" type='text' name='animal-1' required>
