--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <br>
 
         <!--Textarea-->  
-        <label for="message">Meaningful message:</label>
+        <label for="message">Meaningful message or a Moral for the story:</label>
         <textarea id="message" name="message" rows="8" cols="40">      
         </textarea>
         <br>
